--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <hr>
 
-    <a href="Index.html">Home</a> |
-    <a href="About.html">About Me</a> |
+    <a href="index.html">Home</a> |
+    <a href="about.html">About Me</a> |
      |
-    <a href="Blog.html">Blog</a> |
-    <a href="Contact.html">Contact</a>
+    <a href="blog.html">Blog</a> |
+    <a href="contact.html">Contact</a>
 
     <hr>
 
@@ -24,3 +24,4 @@
 
 </body>
 </html>
+
