--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,10 @@
 
     <h1>Contact Me</h1>
 
-    <a href="Index.html">Home</a> |
-    <a href="About.html">About Me</a> |
+    <a href="index.html">Home</a> |
+    <a href="about.html">About Me</a> |
    
-    <a href="Blog.html">Blog</a>
+    <a href="blog.html">Blog</a>
 
     <ul>
    <li><p><b>Name:</b> Arshpreet Kaur</p></li>
@@ -23,3 +23,4 @@
 
 </body>
 </html>
+
