--- a/blog.html
+++ b/blog.html
@@ -7,10 +7,10 @@
 
     <h1>My Blog</h1>
 
-    <a href="Index.html">Home</a> |
-    <a href="About.html">About Me</a> |
+    <a href="index.html">Home</a> |
+    <a href="about.html">About Me</a> |
      |
-    <a href="Contact.html">Contact</a>
+    <a href="contact.html">Contact</a>
 
     <hr>
 
@@ -29,3 +29,4 @@
 
 </body>
 </html>
+
