--- a/about.html
+++ b/about.html
@@ -7,10 +7,10 @@
 
     <h1>About Me</h1>
 
-    <a href="Index.html">Home</a> |
+    <a href="index.html">Home</a> |
      |
-    <a href="Blog.html">Blog</a> |
-    <a href="Contact.html">Contact</a>
+    <a href="blog.html">Blog</a> |
+    <a href="contact.html">Contact</a>
 
     <hr>
 
@@ -43,3 +43,4 @@
 
 </body>
 </html>
+
